# Latent_Diffusion_NLP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  results_06_12_25.md
ClassicalDiT/: BetaSchedule.cpp  Diffusion_Sample.cpp  Diffusion_model.cpp  Diffusion_model.hpp  GaussianDiffusion.cpp  GaussianDiffusion.hpp  NormalDist.cpp  main.cpp  training.cpp
ClassicalDiT/NN/: EpsilonPredictor.cpp  NeuralNetwork.cpp
